wflow_publish("analysis/exploreData.Rmd")

--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -20,6 +20,9 @@ library(gridExtra)
 library(missMethyl)
 library(ggplot2)
 library(glue)
+library(tidyverse)
+library(rbin)
+library(patchwork)
 source(here("code/utility.R"))
 ```
 
@@ -139,104 +142,61 @@ if(!file.exists(outFile)){
 ```
 
 ```{r}
-method <- "gometh"
-arrayType <- "EPIC"
-set <- "GO"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
-scriptFile <- here("code/testMethods.R")
-  
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
-}
+inFiles <- list.files(here("output/compare-methods"), pattern = "rds", 
+                      full.names = TRUE)
+
+res <- lapply(inFiles, function(file){
+    readRDS(file)
+})
+
+dat <- as_tibble(dplyr::bind_rows(res))
 ```
 
-```{r, fig.width=9}
-anno <- loadAnnotation("EPIC")
-flatAnn <- missMethyl:::.getFlatAnnotation("EPIC", anno = anno)
-cpgEgGo <- cpgsByGO(flatAnn)
-medCpgEgGo <- data.frame(med=tapply(cpgEgGo$Freq, cpgEgGo$GO, median))
-medCpgEgGo$id <- rownames(medCpgEgGo)
+```{r}
+sub <- dat %>% filter(method %in% c("mmethyl.hgt", "mmethyl.gometh"))
 
-dat <- numeric(0)
+ggplot(sub, aes(x = pvalue, colour = sub, linetype = method)) +
+    geom_density() +
+    facet_wrap(vars(contrast), ncol = 3) +
+    labs(colour = "Sig. CpGs", linetype = "Method", x = "P-value", 
+         y = "Density") +
+    scale_color_hue(labels = c("Top 5000", "Top 10000", "FDR < 0.01", 
+                                  "FDR < 0.05")) + 
+    theme(legend.position = "bottom", legend.text = element_text(size=6))
+```
 
-for(i in indCont){
-  
-  hgt <- gometh.EPIC.GO[[i]]$none
-  gmeth <- gometh.EPIC.GO[[i]]$adj
+```{r}
+ann <- loadAnnotation("EPIC")
+flatAnn <- missMethyl:::.getFlatAnnotation("EPIC", anno = ann)
+cpgEgGo <- cpgsEgGoFreqs(flatAnn)
+```
 
-  tmp <- medCpgEgGo[medCpgEgGo$id %in% rownames(hgt),]
-  tmp <- tmp[order(tmp$med),]
+```{r, fig.width=7}
+cpgEgGo %>% 
+  group_by(GO) %>%
+  summarise(med = median(Freq)) -> medCpgEgGo
 
-  hgt <- hgt[match(rownames(hgt),tmp$id),]
-  gmeth <- gmeth[match(rownames(gmeth),tmp$id),]
+dat %>% filter(set == "GO") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    inner_join(medCpgEgGo, by = c("ID" = "GO")) -> sub
 
-  bins <- rbin_quantiles(tmp, id, med, bins = 5)
-  tmp$bin <- as.factor(findInterval(tmp$med, bins$upper_cut))
-  tmp$hgt <- hgt$P.DE
-  tmp$gmeth <- gmeth$P.DE
+bins <- rbin_quantiles(sub, ID, med, bins = 12)
+sub$bin <- as.factor(findInterval(sub$med, bins$upper_cut))
 
-  binLabs <- paste0("<", bins$upper_cut)
-  names(binLabs) <- levels(tmp$bin)
-  binLabs[length(binLabs)] <- gsub("<", "\u2265", binLabs[length(binLabs) - 1])
+binLabs <- paste0("<", bins$upper_cut)
+names(binLabs) <- levels(sub$bin)
+binLabs[length(binLabs)] <- gsub("<", "\u2265", binLabs[length(binLabs) - 1])
     
-  dat <- rbind(dat, data.frame(reshape2::melt(tmp, id.vars = c("id","med","bin")), 
-                               contrast = colnames(tfit$contrasts)[i]))
-}
+sub %>% group_by(contrast, method, bin) %>%
+  summarise(prop = sum(pvalue < 0.05)/n()) -> pdat
 
-as_tibble(dat) %>% group_by(contrast, variable, bin) %>%
-  summarise(prop = sum(value < 0.05)/n()) -> pdat
-
-p <- ggplot(pdat, aes(x = as.numeric(bin), y = prop, color = variable)) +
+p <- ggplot(pdat, aes(x = as.numeric(bin), y = prop, color = method)) +
   geom_line() +
   facet_wrap(vars(contrast), ncol = 3) +
-  theme_minimal() +
-  scale_x_continuous(breaks = as.numeric(levels(pdat$bin)),labels = binLabs) +
-  theme(axis.text.x = element_text(angle=90, hjust = 1, vjust = 0.5,
-                                   size = 7)) +
-  labs(x = "Med. No. CpGs per Gene per GO Cat. (binned)",
-       y = "Prop. GO Cat. with p-value < 0.05")
-p
-```
-
-```{r, fig.width=5, fig.height=8}
-dat <- numeric(0)
-
-for(i in 4){
-  
-  hgt <- gometh.EPIC.GO[[i]]$none
-  gmeth <- gometh.EPIC.GO[[i]]$adj
-
-  tmp <- medCpgEgGo[medCpgEgGo$id %in% rownames(hgt),]
-  tmp <- tmp[order(tmp$med),]
-
-  hgt <- hgt[match(rownames(hgt),tmp$id),]
-  gmeth <- gmeth[match(rownames(gmeth),tmp$id),]
-
-  bins <- rbin_quantiles(tmp, id, med, bins = 5)
-  tmp$bin <- as.factor(findInterval(tmp$med, bins$upper_cut))
-  tmp$hgt <- hgt$P.DE
-  tmp$gmeth <- gmeth$P.DE
-
-  binLabs <- paste0("<", bins$upper_cut)
-  names(binLabs) <- levels(tmp$bin)
-  binLabs[length(binLabs)] <- gsub("<", "\u2265", binLabs[length(binLabs) - 1])
-    
-  dat <- rbind(dat, data.frame(reshape2::melt(tmp, id.vars = c("id","med","bin")), 
-                               contrast = colnames(tfit$contrasts)[i]))
-}
-
-as_tibble(dat) %>% group_by(contrast, variable, bin) %>%
-  summarise(prop = sum(value < 0.05)/n()) -> pdat
-
-p <- ggplot(pdat, aes(x = as.numeric(bin), y = prop, color = variable)) +
-  geom_line(size = 1.5) +
-  theme_minimal() +
-  scale_x_continuous(breaks = as.numeric(levels(pdat$bin)),labels = binLabs) +
-  theme(axis.text.x = element_text(angle=90, hjust = 1, vjust = 0.5,
-                                   size = 10)) +
+  scale_x_continuous(breaks = as.numeric(levels(pdat$bin)), labels = binLabs) +
+  theme(axis.text.x = element_text(angle=45, hjust = 1, vjust = 1,
+                                   size = 7),
+        legend.position = "bottom") +
   labs(x = "Med. No. CpGs per Gene per GO Cat. (binned)",
        y = "Prop. GO Cat. with p-value < 0.05")
 p
@@ -245,125 +205,96 @@ p
 
 ### methylGSA
 
-```{r}
-method <- "mRRA"
-arrayType <- "EPIC"
-set <- "GO"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
-
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
-}
-```
-
 As we are comparing immune cells, we expect GO categories related to the immune system and its processes to be highly ranked. To evalue this, we downloaded all of the child terms for the GO category "immune system process" (GO:002376) from AminGO 2;  [http://amigo.geneontology.org/amigo/term/GO:0002376](http://amigo.geneontology.org/amigo/term/GO:0002376). 
 
-```{r, fig.width=8}
+```{r, fig.width=7}
 immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"), 
                             stringsAsFactors = FALSE, header = FALSE, 
                             col.names = "GOID"))
-methodNames <- c("hgt", "gometh-best", "mrra-glm", "mrra-ora", "mrra-gsea", "ebgsea")
 
-if(exists("gometh.EPIC.GO") & exists("mRRA.EPIC.GO")){
-  
-  goDat <- numeric(0)
-  sub <- 1:50
-  
-  #for(i in 1:ncol(tfit)){
-  for(i in indCont){
-    
-    hgt <- cumsum(rownames(gometh.EPIC.GO[[i]]$none) %in% immuneGO$GOID)[sub]
-    gmeth <- cumsum(rownames(gometh.EPIC.GO[[i]]$adj) %in% immuneGO$GOID)[sub]
-    glm <- cumsum(rownames(mRRA.EPIC.GO[[i]]$glm) %in% immuneGO$GOID)[sub]
-    ora <- cumsum(rownames(mRRA.EPIC.GO[[i]]$ora) %in% immuneGO$GOID)[sub]
-    gsea <- cumsum(rownames(mRRA.EPIC.GO[[i]]$gsea) %in% immuneGO$GOID)[sub]
-  
-    tmp <- melt(data.frame(hgt, gmeth, glm, ora, gsea, rank=sub), id="rank")
-    tmp$contrast <- colnames(tfit$contrasts)[i]
-    goDat <- rbind(goDat, tmp)  
-  }
+dat %>% filter(set == "GO") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(csum = cumsum(ID %in% immuneGO$GOID)) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> sub
 
-  p <- ggplot(goDat, aes(x=rank,y=value, colour=variable)) +
+p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     geom_line() +
-    facet_wrap(vars(contrast), ncol=3, labeller = labeller(contrast = contNames)) +
-    theme_minimal() +
+    facet_wrap(vars(contrast), ncol=3) +
     geom_vline(xintercept = 10, linetype = "dotted") +
-    scale_color_paletteer_d(package = "LaCroixColoR", palette = "PassionFruit",
-                            labels = methodNames) +
-    labs(colour = "Method") + xlab("Rank") + ylab("Cumulative no. immune sets")
-  p
-}
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
 ```
 
-Examine what the top 10 ranked gene sets are and how many genes (N) they contain, for each method and comparison.
+Examine what the top 10 ranked gene sets are and how many genes they contain, for each method and comparison.
 
-```{r, fig.width=10, fig.height=8}
-pfPal <- paletteer_d(package = "LaCroixColoR", palette = "PassionFruit")
-mar <-  c(4, 25, 2, 3) + 0.1
-oma <- c(2, 0, 2, 0)
+```{r, fig.height=11, fig.width=6}
+terms <- missMethyl:::.getGO()$idTable
+nGenes <- rownames_to_column(data.frame(n = sapply(missMethyl:::.getGO()$idList, 
+                                                   length)), 
+                             var = "ID")
 
-for(i in indCont){
+dat %>% filter(set == "GO") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(rank = 1:n()) %>%
+    mutate(FDR = p.adjust(pvalue)) %>%
+    filter(rank <= 10) %>% 
+    inner_join(terms, by = c("ID" = "GOID")) %>%
+    inner_join(nGenes) -> sub
 
-  par(mfrow = c(3, 2), mar = mar, oma = oma)
-  dat <- head(gometh.EPIC.GO[[i]]$none, n=10)
-  plotTopSets(dat$FDR, dat$TERM, dat$N, methodNames[1], col = pfPal[1])
-  
-  dat <- head(gometh.EPIC.GO[[i]]$adj, n=10)
-  plotTopSets(dat$FDR, dat$TERM, dat$N, methodNames[2], col = pfPal[2])
-  
-  dat <- head(mRRA.EPIC.GO[[i]]$glm, n=10)
-  plotTopSets(dat$padj, dat$TERM, dat$Size, methodNames[3], col = pfPal[3])
-  
-  dat <- head(mRRA.EPIC.GO[[i]]$ora, n=10)
-  plotTopSets(dat$padj, dat$TERM, dat$Size, methodNames[4], col = pfPal[4])
-  
-  dat <- head(mRRA.EPIC.GO[[i]]$gsea, n=10)
-  plotTopSets(dat$padj, dat$TERM, dat$Size, methodNames[5], col = pfPal[5])
-  
-  mtext(contNames[colnames(tfit$contrasts)[i]], outer = TRUE)
-  
-  par(xpd = TRUE, mar = c(5,4,4,2))
-  plot.new()
-  legend("top", legend = methodNames[1:5], 
-       fill = pfPal, cex = 1.5, title = "Method")
-  legend("topright", legend = "p-value = 0", cex = 1.5, pch = "*")
-  par(xpd = FALSE)
+p <- vector("list", length(unique(sub$contrast)) * length(unique(sub$method)))
+i = 1
+for(cont in unique(sub$contrast)){
+    c = 1
+    for(meth in unique(sub$method)){
+        tmp <- sub %>% filter(contrast == cont & method == meth)
+        p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = rank)) + 
+            geom_point(aes(size = n), alpha = 0.5, 
+                colour = scales::hue_pal()(length(unique(sub$method)))[c]) +
+            scale_y_continuous(labels = tmp$TERM, breaks = tmp$rank) +
+            labs(y = "", size = "No. genes", title = meth) +
+            theme(axis.text.y = element_text(size = 6),
+                  plot.title = element_text(size = 8),
+                  legend.position = "right", 
+                  legend.key.size = unit(0.25, "cm"),
+                  legend.text = element_text(size = 6),
+                  legend.title = element_text(size = 8),
+                  axis.text.x = element_text(size = 6),
+                  axis.title.x = element_text(size = 8)) + 
+            coord_cartesian(xlim = c(-log10(0.99), -log10(10^-100))) +
+            geom_vline(xintercept = -log10(0.05), linetype = "dashed")
+        i = i + 1
+        c = c + 1
+    }
 }
+
+(p[[1]] / p[[2]] / p[[3]] / p[[4]] / p[[5]]) + 
+    plot_annotation(title = unique(sub$contrast)[1],
+                    theme = theme(plot.title = element_text(size = 10))) 
+(p[[6]] / p[[7]] / p[[8]] / p[[9]] / p[[10]]) + 
+    plot_annotation(title = unique(sub$contrast)[2],
+                    theme = theme(plot.title = element_text(size = 10))) 
+(p[[11]] / p[[12]] / p[[13]] / p[[14]] / p[[15]]) + 
+    plot_annotation(title = unique(sub$contrast)[3],
+                    theme = theme(plot.title = element_text(size = 10))) 
 ```
 
 P-value histograms for the different methods for all contrasts on GO categories.
 
-```{r, fig.width=10, fig.height=8}
-breaks <- 50
-#ylim <- c(0, 6000)
-ylim <- NULL
-
-for(i in 1:length(contNames)){
-
-  par(mfrow=c(3,2), oma = c(2, 0, 2, 0))
-  hist(gometh.EPIC.GO[[i]]$none$P.DE, breaks = breaks, main = methodNames[1], 
-       xlab = "P-value", col = pfPal[1], ylim = ylim)
-  hist(gometh.EPIC.GO[[i]]$adj$P.DE, breaks = breaks, main = methodNames[2], 
-       xlab = "P-value", col = pfPal[2], ylim = ylim)
-  hist(mRRA.EPIC.GO[[i]]$glm$pvalue, breaks = breaks, main = methodNames[3], 
-       xlab = "P-value", col = pfPal[3], ylim = ylim)
-  hist(mRRA.EPIC.GO[[i]]$ora$pvalue, breaks = breaks, main = methodNames[4], 
-       xlab = "P-value", col = pfPal[4], ylim = ylim)
-  hist(mRRA.EPIC.GO[[i]]$gsea$pvalue, breaks = breaks, main = methodNames[5], 
-       xlab = "P-value", col = pfPal[5], ylim = ylim)
-  
-  mtext(contNames[colnames(tfit$contrasts)[i]], outer = TRUE)
-  
-  par(xpd = TRUE)
-  plot.new()
-  legend("top", legend = methodNames[1:5], 
-       fill = pfPal, cex = 1.5, title = "Method")
-  par(xpd = FALSE)
-}
-
+```{r, fig.height=8, fig.width=7}
+dat %>% filter(set == "GO") %>%
+    filter(sub %in% c("n","c1")) -> sub 
+    
+ggplot(sub, aes(pvalue, fill = method)) +
+    geom_histogram(binwidth = 0.025) +
+    facet_grid(cols = vars(contrast), rows = vars(method)) +
+    theme(legend.position = "bottom") +
+    labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
 
 
@@ -371,212 +302,164 @@ for(i in 1:length(contNames)){
 
 Now test KEGG pathways with at least 5 genes and 5000 at most.
 
-### gometh
-
-```{r}
-method <- "gometh"
-arrayType <- "EPIC"
-set <- "KEGG"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
-scriptFile <- here("code/testMethods.R")
-  
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
-}
-```
-
-### methylGSA
-
-```{r}
-method <- "mRRA"
-arrayType <- "EPIC"
-set <- "KEGG"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
-
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
-}
-```
-
 Again, as we are comparing immune cells we expecte pathways from the following categories to be highly ranked: Immune system, Immune disease, Signal transduction, Signaling molecules and interaction; [https://www.genome.jp/kegg/pathway.html](https://www.genome.jp/kegg/pathway.html). 
 
-```{r, fig.width=8}
+```{r, fig.width=7}
 immuneKEGG <- read.csv(here("data/kegg-immune-related-pathways.csv"), 
                             stringsAsFactors = FALSE, header = FALSE, 
                             col.names = c("ID","pathway"))
 immuneKEGG$PID <- paste0("path:hsa0",immuneKEGG$ID)
 
-if(exists("gometh.EPIC.KEGG") & exists("mRRA.EPIC.KEGG")){  
+dat %>% filter(set == "KEGG") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(csum = cumsum(ID %in% immuneKEGG$PID)) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> sub
 
-  keggDat <- numeric(0)
-  sub <- 1:20
-
-    #for(i in 1:ncol(tfit)){
-  for(i in indCont){
-  
-    hgt <- cumsum(rownames(gometh.EPIC.KEGG[[i]]$none) %in% immuneKEGG$PID)[sub]
-    gmeth <- cumsum(rownames(gometh.EPIC.KEGG[[i]]$adj) %in% immuneKEGG$PID)[sub]
-    glm <- cumsum(rownames(mRRA.EPIC.KEGG[[i]]$glm) %in% immuneKEGG$PID)[sub]
-    ora <- cumsum(rownames(mRRA.EPIC.KEGG[[i]]$ora) %in% immuneKEGG$PID)[sub]
-    gsea <- cumsum(rownames(mRRA.EPIC.KEGG[[i]]$gsea) %in% immuneKEGG$PID)[sub]
-  
-    tmp <- melt(data.frame(hgt, gmeth, glm, ora, gsea, rank=sub), id="rank")
-    tmp$contrast <- colnames(tfit$contrasts)[i]
-    keggDat <- rbind(keggDat, tmp)  
-  }
-
-  p <- ggplot(keggDat, aes(x=rank,y=value, colour=variable)) +
+p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     geom_line() +
-    facet_wrap(vars(contrast), ncol=3, labeller = labeller(contrast = contNames)) +
-    theme_minimal() +
-    geom_vline(xintercept = 10, linetype = "dotted") + 
-    scale_color_paletteer_d(package = "LaCroixColoR", palette = "PassionFruit",
-                            labels = methodNames) +
-    labs(colour = "Method") + xlab("Rank") + ylab("Cumulative no. immune sets")
-  p
-}
+    facet_wrap(vars(contrast), ncol=3) +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
 ```
 
-```{r, fig.width=10, fig.height=8}
-for(i in indCont){
+Examine what the top 10 ranked gene sets are and how many genes they contain, for each method and comparison.
 
-  par(mfrow = c(3, 2), mar = mar, oma = oma)
-  dat <- head(gometh.EPIC.KEGG[[i]]$none, n=10)
-  plotTopSets(dat$FDR, dat$Description, dat$N, methodNames[1], col = pfPal[1])
-  
-  dat <- head(gometh.EPIC.KEGG[[i]]$adj, n=10)
-  plotTopSets(dat$FDR, dat$Description, dat$N, methodNames[2], col = pfPal[2])
-  
-  dat <- head(mRRA.EPIC.KEGG[[i]]$glm, n=10)
-  plotTopSets(dat$padj, dat$Description, dat$Size, methodNames[3], col = pfPal[3])
-  
-  dat <- head(mRRA.EPIC.KEGG[[i]]$ora, n=10)
-  plotTopSets(dat$padj, dat$Description, dat$Size, methodNames[4], col = pfPal[4])
-  
-  dat <- head(mRRA.EPIC.KEGG[[i]]$gsea, n=10)
-  plotTopSets(dat$padj, dat$Description, dat$Size, methodNames[5], col = pfPal[5])
-  
-  mtext(contNames[colnames(tfit$contrasts)[i]], outer = TRUE)
-  
-  par(xpd = TRUE, mar = c(5,4,4,2))
-  plot.new()
-  legend("top", legend = methodNames[1:5], 
-       fill = pfPal, cex = 1.5, title = "Method")
-  legend("topright", legend = "p-value = 0", cex = 1.5, pch = "*")
-  par(xpd = FALSE)
+```{r, fig.height=11, fig.width=6}
+terms <- missMethyl:::.getKEGG()$idTable
+nGenes <- rownames_to_column(data.frame(n = sapply(missMethyl:::.getKEGG()$idList, 
+                                                   length)), 
+                             var = "ID")
+
+dat %>% filter(set == "KEGG") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(rank = 1:n()) %>%
+    mutate(FDR = p.adjust(pvalue)) %>%
+    filter(rank <= 10) %>% 
+    inner_join(terms, by = c("ID" = "PathwayID")) %>%
+    inner_join(nGenes) -> sub
+
+p <- vector("list", length(unique(sub$contrast)) * length(unique(sub$method)))
+i = 1
+for(cont in unique(sub$contrast)){
+    c = 1
+    for(meth in unique(sub$method)){
+        tmp <- sub %>% filter(contrast == cont & method == meth)
+        p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = rank)) + 
+            geom_point(aes(size = n), alpha = 0.5, 
+                colour = scales::hue_pal()(length(unique(sub$method)))[c]) +
+            scale_y_continuous(labels = tmp$Description, breaks = tmp$rank) +
+            labs(y = "", size = "No. genes", title = meth) +
+            theme(axis.text.y = element_text(size = 6),
+                  plot.title = element_text(size = 8),
+                  legend.position = "right", 
+                  legend.key.size = unit(0.25, "cm"),
+                  legend.text = element_text(size = 6),
+                  legend.title = element_text(size = 8),
+                  axis.text.x = element_text(size = 6),
+                  axis.title.x = element_text(size = 8)) + 
+            coord_cartesian(xlim = c(-log10(0.99), -log10(10^-15))) +
+            geom_vline(xintercept = -log10(0.05), linetype = "dashed")
+        i = i + 1
+        c = c + 1
+    }
 }
+
+(p[[1]] / p[[2]] / p[[3]] / p[[4]] / p[[5]]) + 
+    plot_annotation(title = unique(sub$contrast)[1],
+                    theme = theme(plot.title = element_text(size = 10))) 
+(p[[6]] / p[[7]] / p[[8]] / p[[9]] / p[[10]]) + 
+    plot_annotation(title = unique(sub$contrast)[2],
+                    theme = theme(plot.title = element_text(size = 10))) 
+(p[[11]] / p[[12]] / p[[13]] / p[[14]] / p[[15]]) + 
+    plot_annotation(title = unique(sub$contrast)[3],
+                    theme = theme(plot.title = element_text(size = 10))) 
+```
+
+P-value histograms for the different methods for all contrasts on KEGG pathways.
+
+```{r, fig.height=8, fig.width=7}
+dat %>% filter(set == "KEGG") %>%
+    filter(sub %in% c("n","c1")) -> sub 
+    
+ggplot(sub, aes(pvalue, fill = method)) +
+    geom_histogram(binwidth = 0.025) +
+    facet_grid(cols = vars(contrast), rows = vars(method)) +
+    theme(legend.position = "bottom") +
+    labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
 
 ## Test Broad gene sets
 
 As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. Note, As methylRRA (GSEA) consistenly performed very poorly in previous comparisons, it is being omitted from the following results.  
 
-### ebGSEA
+```{r, fig.height=15, fig.width=6}
+library(ChAMP)
+data(PathwayList)
+nGenes <- rownames_to_column(data.frame(n = sapply(PathwayList, 
+                                                   length)), 
+                             var = "ID")
 
-```{r}
-method <- "ebGSEA"
-arrayType <- "EPIC"
-set <- "BROAD"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
+dat %>% filter(set == "BROAD") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(rank = 1:n()) %>%
+    mutate(FDR = p.adjust(pvalue)) %>%
+    filter(rank <= 10) %>% 
+    inner_join(nGenes) -> sub
 
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
+p <- vector("list", length(unique(sub$contrast)) * length(unique(sub$method)))
+i = 1
+for(cont in unique(sub$contrast)){
+    c = 1
+    for(meth in unique(sub$method)){
+        tmp <- sub %>% filter(contrast == cont & method == meth)
+        p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = rank)) + 
+            geom_point(aes(size = n), alpha = 0.5, 
+                colour = scales::hue_pal()(length(unique(sub$method)))[c]) +
+            scale_y_continuous(labels = tmp$ID, breaks = tmp$rank) +
+            labs(y = "", size = "No. genes", title = meth) +
+            theme(axis.text.y = element_text(size = 6),
+                  plot.title = element_text(size = 8),
+                  legend.position = "right", 
+                  legend.key.size = unit(0.25, "cm"),
+                  legend.text = element_text(size = 6),
+                  legend.title = element_text(size = 8),
+                  axis.text.x = element_text(size = 6),
+                  axis.title.x = element_text(size = 8)) + 
+            coord_cartesian(xlim = c(-log10(0.99), -log10(10^-100))) +
+            geom_vline(xintercept = -log10(0.05), linetype = "dashed")
+        i = i + 1
+        c = c + 1
+    }
 }
-```
 
-### gometh
-```{r}
-method <- "gometh"
-arrayType <- "EPIC"
-set <- "BROAD"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
-
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
-}
-```
-
-### mRRA
-```{r}
-method <- "mRRA"
-arrayType <- "EPIC"
-set <- "BROAD"
-out <- paste(method,arrayType,set,sep=".")
-outFile <- here(glue("data/{out}.RData"))
-
-if(file.exists(outFile)){
-  load(outFile)
-} else {
-  runBgAnalysis(scriptFile, method, arrayType, set, inputFile)
-}
-```
-
-```{r, fig.width=10, fig.height=8}
-for(i in indCont){
-
-  par(mfrow = c(3, 2), mar = mar, oma = oma)
-  dat <- head(gometh.EPIC.BROAD[[i]]$none, n=10)
-  plotTopSets(dat$FDR, rownames(dat), dat$N, methodNames[1], col = pfPal[1])
-  
-  dat <- head(gometh.EPIC.BROAD[[i]]$adj, n=10)
-  plotTopSets(dat$FDR, rownames(dat), dat$N, methodNames[2], col = pfPal[2])
-  
-  dat <- head(mRRA.EPIC.BROAD[[i]]$glm, n=10)
-  plotTopSets(dat$padj, rownames(dat), dat$Size, methodNames[3], col = pfPal[3])
-  
-  dat <- head(mRRA.EPIC.BROAD[[i]]$ora, n=10)
-  plotTopSets(dat$padj, rownames(dat), dat$Size, methodNames[4], col = pfPal[4])
-  
-  dat <- data.frame(head(ebGSEA.EPIC.BROAD[[i]]$ebgs[[1]], n=10))
-  plotTopSets(dat$adjP, rownames(dat), dat$nREP, methodNames[6], col = pfPal[6])
-  
-  mtext(contNames[colnames(tfit$contrasts)[i]], outer = TRUE)
-  
-  par(xpd = TRUE, mar = c(5,4,4,2))
-  plot.new()
-  legend("top", legend = methodNames[c(1:4,6)], 
-       fill = pfPal[c(1:4,6)], cex = 1.5, title = "Method")
-  legend("topright", legend = "p-value = 0", cex = 1.5, pch = "*")
-  par(xpd = FALSE)
-}
+(p[[1]] / p[[2]] / p[[3]] / p[[4]] / p[[5]] / p[[6]] / p[[7]]) + 
+    plot_annotation(title = unique(sub$contrast)[1],
+                    theme = theme(plot.title = element_text(size = 10))) 
+(p[[8]] / p[[9]] / p[[10]] / p[[11]] / p[[12]] / p[[13]] / p[[14]]) + 
+    plot_annotation(title = unique(sub$contrast)[2],
+                    theme = theme(plot.title = element_text(size = 10))) 
+(p[[15]] / p[[16]] / p[[17]] / p[[18]] / p[[19]] / p[[20]] / p[[21]]) + 
+    plot_annotation(title = unique(sub$contrast)[3],
+                    theme = theme(plot.title = element_text(size = 10))) 
 ```
 P-value histograms for the different methods for all contrasts on BROAD gene sets.
 
-```{r, fig.width=10, fig.height=8}
-breaks <- 50
-#ylim <- c(0, 6000)
-ylim <- NULL
-
-for(i in 1:length(contNames)){
-
-  par(mfrow=c(3,2), oma = c(2, 0, 2, 0))
-  hist(gometh.EPIC.BROAD[[i]]$none$P.DE, breaks = breaks, main = methodNames[1], 
-       xlab = "P-value", col = pfPal[1], ylim = ylim)
-  hist(gometh.EPIC.BROAD[[i]]$adj$P.DE, breaks = breaks, main = methodNames[2], 
-       xlab = "P-value", col = pfPal[2], ylim = ylim)
-  hist(mRRA.EPIC.BROAD[[i]]$glm$pvalue, breaks = breaks, main = methodNames[3], 
-       xlab = "P-value", col = pfPal[3], ylim = ylim)
-  hist(mRRA.EPIC.BROAD[[i]]$ora$pvalue, breaks = breaks, main = methodNames[4], 
-       xlab = "P-value", col = pfPal[4], ylim = ylim)
-  hist(mRRA.EPIC.BROAD[[i]]$gsea$pvalue, breaks = breaks, main = methodNames[5], 
-       xlab = "P-value", col = pfPal[5], ylim = ylim)
-  hist(ebGSEA.EPIC.BROAD[[i]]$ebgs[[1]][,c("P(WT)")], breaks = breaks, 
-       main = methodNames[6], 
-       xlab = "P-value", col = pfPal[6], ylim = ylim)
-  
-  mtext(contNames[colnames(tfit$contrasts)[i]], outer = TRUE)
-}
-
+```{r, fig.height=10, fig.width=7}
+dat %>% filter(set == "BROAD") %>%
+    filter(sub %in% c("n","c1")) -> sub 
+    
+ggplot(sub, aes(pvalue, fill = method)) +
+    geom_histogram(binwidth = 0.025) +
+    facet_grid(cols = vars(contrast), rows = vars(method)) +
+    theme(legend.position = "bottom") +
+    labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
