--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -116,11 +116,11 @@ ggplot(dat, aes(x = comp, y = num, fill = dir)) +
   labs(x = "Comparison", y = "No. DM CpGs (FDR < 0.05)", fill = "Direction")
 ```
 
-## Test GO categories
+## Compare performance of different gene set testing methods
 
-Compare the gene set testing methods available for methylation arrays; hypergeometric test (HGT), gometh (best), methylRRA (GLM), methylRRA (ORA) and methylRRA (GSEA). As methylRRA does not work well with sets that only contain very few genes or very large sets, we will only test sets with at least 5 genes and maximum of 5000 genes. First test GO categories.
+Compare the gene set testing methods available for methylation arrays; hypergeometric test (HGT), gometh (best), methylRRA (GLM), methylRRA (ORA) and methylRRA (GSEA). As methylRRA does not work well with sets that only contain very few genes or very large sets, we will only test sets with at least 5 genes and maximum of 5000 genes.
 
-### gometh
+### Save analysis results
 
 ```{r}
 minsize <- 5
@@ -141,6 +141,8 @@ if(!file.exists(outFile)){
 } 
 ```
 
+### Load output for all methods
+
 ```{r}
 inFiles <- list.files(here("output/compare-methods"), pattern = "rds", 
                       full.names = TRUE)
@@ -155,15 +157,16 @@ dat <- as_tibble(dplyr::bind_rows(res))
 ```{r}
 sub <- dat %>% filter(method %in% c("mmethyl.hgt", "mmethyl.gometh"))
 
-ggplot(sub, aes(x = pvalue, colour = sub, linetype = method)) +
+ggplot(sub, aes(x = pvalue, colour = sub)) +
     geom_density() +
-    facet_wrap(vars(contrast), ncol = 3) +
-    labs(colour = "Sig. CpGs", linetype = "Method", x = "P-value", 
-         y = "Density") +
+    facet_grid(cols = vars(contrast), rows = vars(method)) +
+    labs(colour = "Sig. CpG Selection", x = "P-value", y = "Density") +
     scale_color_hue(labels = c("Top 5000", "Top 10000", "FDR < 0.01", 
                                   "FDR < 0.05")) + 
     theme(legend.position = "bottom", legend.text = element_text(size=6))
 ```
+
+## Test GO categories
 
 ```{r}
 ann <- loadAnnotation("EPIC")
@@ -201,9 +204,6 @@ p <- ggplot(pdat, aes(x = as.numeric(bin), y = prop, color = method)) +
        y = "Prop. GO Cat. with p-value < 0.05")
 p
 ```
-
-
-### methylGSA
 
 As we are comparing immune cells, we expect GO categories related to the immune system and its processes to be highly ranked. To evalue this, we downloaded all of the child terms for the GO category "immune system process" (GO:002376) from AminGO 2;  [http://amigo.geneontology.org/amigo/term/GO:0002376](http://amigo.geneontology.org/amigo/term/GO:0002376). 
 
@@ -296,7 +296,6 @@ ggplot(sub, aes(pvalue, fill = method)) +
     theme(legend.position = "bottom") +
     labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
-
 
 ## Test KEGG pathways
 
@@ -395,12 +394,12 @@ ggplot(sub, aes(pvalue, fill = method)) +
     labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
 
-## Test Broad gene sets
+## Test BROAD gene sets
 
 As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. Note, As methylRRA (GSEA) consistenly performed very poorly in previous comparisons, it is being omitted from the following results.  
 
 ```{r, fig.height=15, fig.width=6}
-library(ChAMP)
+library(ChAMPdata)
 data(PathwayList)
 nGenes <- rownames_to_column(data.frame(n = sapply(PathwayList, 
                                                    length)), 
