--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -23,6 +23,7 @@ library(glue)
 library(tidyverse)
 library(rbin)
 library(patchwork)
+library(ChAMPdata)
 source(here("code/utility.R"))
 ```
 
@@ -241,8 +242,8 @@ dat %>% filter(set == "GO") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(rank = 1:n()) %>%
     mutate(FDR = p.adjust(pvalue)) %>%
+    mutate(rank = 1:n()) %>%
     filter(rank <= 10) %>% 
     inner_join(terms, by = c("ID" = "GOID")) %>%
     inner_join(nGenes) -> sub
@@ -252,11 +253,14 @@ i = 1
 for(cont in unique(sub$contrast)){
     c = 1
     for(meth in unique(sub$method)){
-        tmp <- sub %>% filter(contrast == cont & method == meth)
+        tmp <- sub %>% filter(contrast == cont & method == meth) %>%
+            mutate(rank = factor(rank), 
+                   rank = factor(rank, levels = rev(levels(rank))))
+        
         p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = rank)) + 
             geom_point(aes(size = n), alpha = 0.5, 
                 colour = scales::hue_pal()(length(unique(sub$method)))[c]) +
-            scale_y_continuous(labels = tmp$TERM, breaks = tmp$rank) +
+            scale_y_discrete(labels = rev(tmp$TERM)) +
             labs(y = "", size = "No. genes", title = meth) +
             theme(axis.text.y = element_text(size = 6),
                   plot.title = element_text(size = 8),
@@ -338,8 +342,8 @@ dat %>% filter(set == "KEGG") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(rank = 1:n()) %>%
     mutate(FDR = p.adjust(pvalue)) %>%
+    mutate(rank = 1:n()) %>%
     filter(rank <= 10) %>% 
     inner_join(terms, by = c("ID" = "PathwayID")) %>%
     inner_join(nGenes) -> sub
@@ -349,11 +353,14 @@ i = 1
 for(cont in unique(sub$contrast)){
     c = 1
     for(meth in unique(sub$method)){
-        tmp <- sub %>% filter(contrast == cont & method == meth)
+        tmp <- sub %>% filter(contrast == cont & method == meth) %>%
+            mutate(rank = factor(rank), 
+                   rank = factor(rank, levels = rev(levels(rank))))
+        
         p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = rank)) + 
             geom_point(aes(size = n), alpha = 0.5, 
                 colour = scales::hue_pal()(length(unique(sub$method)))[c]) +
-            scale_y_continuous(labels = tmp$Description, breaks = tmp$rank) +
+            scale_y_discrete(labels = rev(tmp$Description)) +
             labs(y = "", size = "No. genes", title = meth) +
             theme(axis.text.y = element_text(size = 6),
                   plot.title = element_text(size = 8),
@@ -399,7 +406,6 @@ ggplot(sub, aes(pvalue, fill = method)) +
 As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. Note, As methylRRA (GSEA) consistenly performed very poorly in previous comparisons, it is being omitted from the following results.  
 
 ```{r, fig.height=15, fig.width=6}
-library(ChAMPdata)
 data(PathwayList)
 nGenes <- rownames_to_column(data.frame(n = sapply(PathwayList, 
                                                    length)), 
@@ -409,8 +415,8 @@ dat %>% filter(set == "BROAD") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(rank = 1:n()) %>%
     mutate(FDR = p.adjust(pvalue)) %>%
+    mutate(rank = 1:n()) %>%
     filter(rank <= 10) %>% 
     inner_join(nGenes) -> sub
 
@@ -419,11 +425,14 @@ i = 1
 for(cont in unique(sub$contrast)){
     c = 1
     for(meth in unique(sub$method)){
-        tmp <- sub %>% filter(contrast == cont & method == meth)
+        tmp <- sub %>% filter(contrast == cont & method == meth) %>%
+            mutate(rank = factor(rank), 
+                   rank = factor(rank, levels = rev(levels(rank))))
+        
         p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = rank)) + 
             geom_point(aes(size = n), alpha = 0.5, 
                 colour = scales::hue_pal()(length(unique(sub$method)))[c]) +
-            scale_y_continuous(labels = tmp$ID, breaks = tmp$rank) +
+            scale_y_discrete(labels = rev(tmp$ID)) +
             labs(y = "", size = "No. genes", title = meth) +
             theme(axis.text.y = element_text(size = 6),
                   plot.title = element_text(size = 8),
